cambios a TP4 y creacion de TP5

--- a/TP5/TP5.ipynb
+++ b/TP5/TP5.ipynb
@@ -4,27 +4,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Trabajo Práctico N°4"
+    "Trabajo Práctico N°5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ingrese angulo de traslación: 45\n",
+      "ingrese traslación en x5\n",
+      "ingrese traslación en y2\n"
+     ]
+    }
+   ],
    "source": [
     "#! /usr/bin/env python\n",
     "# -*- coding: utf-8 -*-\n",
     "\n",
     "\n",
-    "import cv2\n",
     "import numpy as np\n",
+    "import cv2\n",
     "\n",
-    "blue = (255,0,0); green = (0,255,255); red = (0,0,255)\n",
+    "blue = (255,0,0); green = (0,255,0); red = (0,0,255)\n",
     "drawing=False\n",
-    "\n",
     "xybutton_down = -1, -1\n",
     "\n",
+    "def translate(image, angle, x_t, y_t):\n",
+    "    (h, w) = image.shape[:2]\n",
+    "    angle = np.radians(angle)\n",
+    "    M = np.float32([[np.cos(angle), np.sin(angle), x_t],\n",
+    "                    [-np.sin(angle), np.cos(angle), y_t]])\n",
+    "\n",
+    "\n",
+    "    translate = cv2.warpAffine(image, M, (w, h))\n",
+    "    return translate\n",
+    "\n",
+    "\n",
+    "def input_values():\n",
+    "    global angle, x, y\n",
+    "    angle = int(input('ingrese angulo de traslación: '))\n",
+    "    x =  int(input('ingrese traslación en x'))\n",
+    "    y =  int(input('ingrese traslación en y'))\n",
+    "    \n",
+    "    \n",
+    "    \n",
     "def dibuja(event, x, y, flags, param):\n",
     "    global xybutton_down, drawing, mode, xf, yf, xi, yi\n",
     "    if event == cv2.EVENT_LBUTTONDOWN:\n",
@@ -39,14 +67,18 @@
     "        \n",
     "    elif event == cv2.EVENT_LBUTTONUP:\n",
     "        drawing = False\n",
+    "        cv2.imshow('imagen seleccionada', img_copy[yi:yf, xi:xf])\n",
+    "        \n",
     "\n",
     "def read_img():\n",
     "    global img, img_copy\n",
     "    img = cv2.imread('lenna.png', cv2.IMREAD_COLOR)\n",
     "    img_copy = img.copy()\n",
-    "\n",
+    "    \n",
+    "    \n",
     "read_img()\n",
     "cv2.namedWindow('image')\n",
+    "input_values()\n",
     "cv2.setMouseCallback('image', dibuja)\n",
     "\n",
     "while(1):\n",
@@ -56,7 +88,11 @@
     "        read_img()\n",
     "    elif k == ord('g'):\n",
     "        img_copy = img_copy[yi:yf, xi:xf]\n",
-    "        cv2.imwrite('lenna_croped.png', img_copy)\n",
+    "        img_translate = translate(img_copy, angle, x, y)\n",
+    "        cv2.imwrite('lenna_croped&translated.png', img_translate)\n",
+    "        cv2.imshow('imagen guardada', img_translate)\n",
+    "        \n",
+    "        \n",
     "    elif k == ord('q'):\n",
     "        break\n",
     "\n",
