--- a/TP4/TP4.ipynb
+++ b/TP4/TP4.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,42 +20,49 @@
     "import cv2\n",
     "import numpy as np\n",
     "\n",
-    "blue = (255,0,0); green = (0,255,255); red = (0,0,255)\n",
+    "blue = (255,0,0); green = (0,255,0); red = (0,0,255)\n",
     "drawing=False\n",
     "\n",
     "xybutton_down = -1, -1\n",
     "\n",
     "def dibuja(event, x, y, flags, param):\n",
-    "    global xybutton_down, drawing, mode\n",
+    "    global xybutton_down, drawing, mode, xf, yf, xi, yi\n",
     "    if event == cv2.EVENT_LBUTTONDOWN:\n",
     "        drawing = True\n",
+    "        xi, yi = x, y\n",
     "        xybutton_down = x, y\n",
     "    elif event == cv2.EVENT_MOUSEMOVE:\n",
     "        if drawing is True:\n",
     "            img = img_copy.copy()\n",
-    "            cv2.rectangle(img, xybutton_down, (x,y), blue, -1)\n",
+    "            cv2.rectangle(img, xybutton_down, (x,y), blue, 2)\n",
+    "            xf, yf = x, y\n",
     "        \n",
     "    elif event == cv2.EVENT_LBUTTONUP:\n",
     "        drawing = False\n",
+    "        cv2.imshow('imagen seleccionada', img_copy[yi:yf, xi:xf])\n",
+    "        \n",
     "\n",
     "def read_img():\n",
     "    global img, img_copy\n",
-    "    img = cv2.read('lenna.png', cv2.IMREAD_COLOR)\n",
+    "    img = cv2.imread('lenna.png', cv2.IMREAD_COLOR)\n",
     "    img_copy = img.copy()\n",
     "\n",
     "read_img()\n",
     "cv2.namedWindow('image')\n",
     "cv2.setMouseCallback('image', dibuja)\n",
     "\n",
+    "\n",
     "while(1):\n",
     "    cv2.imshow('image', img)\n",
     "    k = cv2.waitKey(1) & 0xFF\n",
     "    if k == ord('r'):\n",
     "        read_img()\n",
-    "    elif k == org('g'):\n",
-    "        img_copy = img_copy[xybutton_down]\n",
-    "        cv.imwrite('lenna_croped.png', img_copy)\n",
-    "    elif k == org('q'):\n",
+    "    elif k == ord('g'):\n",
+    "        img_copy = img_copy[yi:yf, xi:xf]\n",
+    "        cv2.imwrite('lenna_croped.png', img_copy)\n",
+    "        cv2.imshow('imagen guardada', img_copy)\n",
+    "        \n",
+    "    elif k == ord('q'):\n",
     "        break\n",
     "\n",
     "cv2.destroyAllWindows()"
