--- a/TP7/TP7.ipynb
+++ b/TP7/TP7.ipynb
@@ -9,10 +9,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#!/usr/bin/env python\n",
+    "# coding: utf-8\n",
+    "\n",
+    "\n",
+    "import numpy as np\n",
+    "import cv2\n",
+    "red = (0,0,255)\n",
+    "\n",
+    "drawing=False\n",
+    "xybutton_down = -1, -1\n",
+    "points = []\n",
+    "def affine(image, src_coord, dst_coord):\n",
+    "    (h, w) = image.shape[:2]\n",
+    "    M = cv2.getAffineTransform(src_coord, dst_coord)\n",
+    "    affine = cv2.warpAffine(image, M, (w, h)) #borderValue = BORDER_TRANSPARENT\n",
+    "    \n",
+    "    return affine\n",
+    "\n",
+    "\n",
+    "def mouse_points(event, x, y, flags, param):\n",
+    "    global img_point, img_point\n",
+    "    if event == cv2.EVENT_LBUTTONDOWN:\n",
+    "            points.append([x, y])\n",
+    "            cv2.circle(img_point, (x, y), 3, red, -1)\n",
+    "    \n",
+    "            \n",
+    "\n",
+    "def selected_points(image):\n",
+    "    cv2.namedWindow('Selección de tres (3) puntos')\n",
+    "    cv2.setMouseCallback('Selección de tres (3) puntos', mouse_points)\n",
+    "    \n",
+    "    while(1):\n",
+    "        cv2.imshow('Selección de tres (3) puntos', image)\n",
+    "        k = cv2.waitKey(1)\n",
+    "        if len(points) == 3:\n",
+    "            break\n",
+    "    cv2.destroyAllWindows()\n",
+    "    \n",
+    "    return np.array(points, dtype = np.float32)\n",
+    "    \n",
+    "\n",
+    "        \n",
+    "\n",
+    "def read_img():\n",
+    "    global img, img2, img_copy, img2_copy, h,w , h_2, w_2\n",
+    "    img = cv2.imread('lenna.png', cv2.IMREAD_COLOR)\n",
+    "    h,w = img.shape[:2]\n",
+    "    img2 = cv2.imread('bandera.png', cv2.IMREAD_COLOR)\n",
+    "    img2 = cv2.resize(img2, img.shape[1::-1])\n",
+    "    h_2,w_2 = img.shape[:2]\n",
+    "    \n",
+    "    img_copy = img.copy()\n",
+    "    img2_copy = img2.copy()\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "read_img()\n",
+    "img_new = np.zeros((h,w,3), np.uint8)\n",
+    "\n",
+    "\n",
+    "\n",
+    "cv2.namedWindow('image')\n",
+    "\n",
+    "while(1):\n",
+    "    cv2.imshow('image', img)\n",
+    "    k = cv2.waitKey(1) & 0xFF\n",
+    "    if k == ord('r'):\n",
+    "        read_img()\n",
+    "    elif k == ord('a'):\n",
+    "        img_point = img_copy\n",
+    "        src_coord = np.float32([[0,0],[w_2,0],[0,h_2]])\n",
+    "        dst_coord = selected_points(img_point)\n",
+    "        \n",
+    "        img_affined = affine(img2_copy, src_coord, dst_coord)\n",
+    "        cv2.imshow('resultado', img_affined)\n",
+    "        \n",
+    "        img_affined_gray = cv2.cvtColor(img_affined, cv2.COLOR_BGR2GRAY)\n",
+    "        \n",
+    "        \n",
+    "        #Lo hago con gris porque sino da error\n",
+    "        masked = cv2.bitwise_and(img, img, mask=img_affined_gray)\n",
+    "        cv2.imshow('Masked', masked)\n",
+    "        \n",
+    "        inv_masked = cv2.bitwise_xor( masked,img)\n",
+    "        cv2.imshow('Masked_n', inv_masked)\n",
+    "        \n",
+    "        \n",
+    "        img_n = cv2.add(inv_masked, img_affined)\n",
+    "        cv2.imshow('add', img_n)\n",
+    "        \n",
+    "        \n",
+    "    elif k == ord('q'):\n",
+    "        break\n",
+    "\n",
+    "cv2.destroyAllWindows()"
+   ]
   }
  ],
  "metadata": {
