desarrollo TP9 y descubro errores en rectangulo (TP4), falta pulir

--- a/TP8/TP8.ipynb
+++ b/TP8/TP8.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,10 +22,11 @@
     "\n",
     "\n",
     "red = (0,0,255)\n",
-    "\n",
     "drawing=False\n",
     "xybutton_down = -1, -1\n",
     "points = []\n",
+    "\n",
+    "name_image = 'Raid.jpg'\n",
     "\n",
     "def perspective(image, src_coord, dst_coord):\n",
     "    (h, w) = image.shape[:2]\n",
@@ -58,9 +59,9 @@
     "\n",
     "        \n",
     "\n",
-    "def read_img():\n",
+    "def read_img(image):\n",
     "    global img, img_copy, h,w, new_h, new_w\n",
-    "    img = cv2.imread('Raid.jpg', cv2.IMREAD_COLOR)\n",
+    "    img = cv2.imread(image, cv2.IMREAD_COLOR)\n",
     "    h,w = img.shape[:2]\n",
     "    if h > 1080:\n",
     "        scale_h = 768/h\n",
@@ -77,8 +78,8 @@
     "    img_copy = img.copy()\n",
     "    \n",
     "    \n",
-    "    \n",
-    "read_img()\n",
+    "\n",
+    "read_img(name_image)\n",
     "\n",
     "while(1):\n",
     "    cv2.imshow('image', img)\n",
