Pulido listo, todos los TPS del 1 al 9 terminados

--- a/TP5/TP5.ipynb
+++ b/TP5/TP5.ipynb
@@ -17,8 +17,8 @@
      "output_type": "stream",
      "text": [
       "ingrese angulo de traslación: 45\n",
-      "ingrese traslación en x5\n",
-      "ingrese traslación en y2\n"
+      "ingrese traslación en x45\n",
+      "ingrese traslación en y45\n"
      ]
     }
    ],
@@ -32,7 +32,7 @@
     "\n",
     "blue = (255,0,0); green = (0,255,0); red = (0,0,255)\n",
     "drawing=False\n",
-    "xybutton_down = -1, -1\n",
+    "\n",
     "\n",
     "def translate(image, angle, x_t, y_t):\n",
     "    (h, w) = image.shape[:2]\n",
@@ -54,15 +54,15 @@
     "    \n",
     "    \n",
     "def dibuja(event, x, y, flags, param):\n",
-    "    global xybutton_down, drawing, mode, xf, yf, xi, yi\n",
+    "    global drawing, mode, xf, yf, xi, yi\n",
+    "    \n",
     "    if event == cv2.EVENT_LBUTTONDOWN:\n",
     "        drawing = True\n",
     "        xi, yi = x, y\n",
-    "        xybutton_down = x, y\n",
     "    elif event == cv2.EVENT_MOUSEMOVE:\n",
     "        if drawing is True:\n",
     "            img = img_copy.copy()\n",
-    "            cv2.rectangle(img, xybutton_down, (x,y), blue, 2)\n",
+    "            cv2.rectangle(img, (xi, yi), (x,y), blue, 2)\n",
     "            xf, yf = x, y\n",
     "        \n",
     "    elif event == cv2.EVENT_LBUTTONUP:\n",
@@ -98,6 +98,13 @@
     "\n",
     "cv2.destroyAllWindows()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
