cambios a tp6, tp7, tp8, tp9. Faltan unos cambios al TP9

--- a/TP6/TP6.ipynb
+++ b/TP6/TP6.ipynb
@@ -16,10 +16,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ingrese angulo de traslación: 30\n",
-      "ingrese traslación en x: 15\n",
-      "ingrese traslación en y: 15\n",
-      "ingrese valor de escala: 3\n"
+      "ingrese angulo de traslación: 23\n",
+      "ingrese traslación en x: 23\n",
+      "ingrese traslación en y: 23\n",
+      "ingrese valor de escala: 1.3\n"
      ]
     }
    ],
@@ -27,13 +27,7 @@
     "#!/usr/bin/env python\n",
     "# coding: utf-8\n",
     "\n",
-    "# Trabajo Práctico N°5\n",
-    "\n",
-    "# In[1]:\n",
-    "\n",
-    "\n",
-    "#! /usr/bin/env python\n",
-    "# -*- coding: utf-8 -*-\n",
+    "# Trabajo Práctico N°6\n",
     "\n",
     "\n",
     "import numpy as np\n",
@@ -56,23 +50,23 @@
     "\n",
     "def input_values():\n",
     "    global angle, x, y, scale\n",
-    "    angle = int(input('ingrese angulo de traslación: '))\n",
+    "    angle = float(input('ingrese angulo de traslación: '))\n",
     "    x =  int(input('ingrese traslación en x: '))\n",
     "    y =  int(input('ingrese traslación en y: '))\n",
-    "    scale=int(input('ingrese valor de escala: '))\n",
+    "    scale= float(input('ingrese valor de escala: '))\n",
     "    \n",
     "    \n",
     "    \n",
     "def dibuja(event, x, y, flags, param):\n",
-    "    global xybutton_down, drawing, mode, xf, yf, xi, yi\n",
+    "    global drawing, mode, xf, yf, xi, yi\n",
     "    if event == cv2.EVENT_LBUTTONDOWN:\n",
     "        drawing = True\n",
     "        xi, yi = x, y\n",
-    "        xybutton_down = x, y\n",
+    "        \n",
     "    elif event == cv2.EVENT_MOUSEMOVE:\n",
     "        if drawing is True:\n",
-    "            img = img_copy.copy()\n",
-    "            cv2.rectangle(img, xybutton_down, (x,y), blue, 2)\n",
+    "            img[:] = img_copy[:]\n",
+    "            cv2.rectangle(img, (xi, yi), (x,y), blue, 2)\n",
     "            xf, yf = x, y\n",
     "        \n",
     "    elif event == cv2.EVENT_LBUTTONUP:\n",
@@ -108,6 +102,13 @@
     "\n",
     "cv2.destroyAllWindows()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
