--- a/TP8/TP8.ipynb
+++ b/TP8/TP8.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,11 +44,11 @@
     "            \n",
     "\n",
     "def selected_points(image):\n",
-    "    cv2.namedWindow('Selección de tres (4) puntos')\n",
-    "    cv2.setMouseCallback('Selección de tres (4) puntos', mouse_points)\n",
+    "    cv2.namedWindow('Seleccion de cuatro puntos')\n",
+    "    cv2.setMouseCallback('Seleccion de cuatro puntos', mouse_points)\n",
     "    \n",
     "    while(1):\n",
-    "        cv2.imshow('Selección de tres (4) puntos', image)\n",
+    "        cv2.imshow('Seleccion de cuatro puntos', image)\n",
     "        k = cv2.waitKey(1)\n",
     "        if len(points) == 4:\n",
     "            break\n",
